common/keycloak/post-install/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
  - auth.glythium.io
  - auth.glythium.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - name: http
    route:
    - destination:
        host: keycloak
